2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Replace qemu-img usage with dd to decrease
	dependencies.

2012-03-10  Richard Laager <rlaager@wiktel.com>

	* util/grub.d/10_linux.in: Fix ZFS root passing.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c: Add TRANSLATORS comments.
	* grub-core/commands/xnu_uuid.c: Likewise.
	* grub-core/loader/efi/appleloader.c: Likewise.
	* grub-core/script/execute.c: Likewise.
	* grub-core/script/main.c: Likewise.
	* util/grub-mkfont.c: Likewise.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (options): Use more appropriate "select" that
	"set" for face index.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (options): Gettextize command summaries.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Use
	"out of memory" error messagge.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Add scanning
	of diskfilter for diskfilter on diskfilter support.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Ensure that the child is not localised.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Check for themes/starfield/theme.txt and not
	themes/starfield.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regcomp.c (regerror): Fix out-of-range array lookup.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/idt.c (grub_gdb_breakpoint): Remove old debug code.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c (grub_cmd_hashsum): Remove dot at the end
	of error message.

2012-03-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix install non-PreP IEEE1275 install.
